--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
        with:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           resourceGroupName: ${{ secrets.AZURE_RG }}
-          template: ./ARMTemplates/azureblob.json
-          parameters: ./ARMTemplates/azureblob.parameters-dev.json
+          template: ./ARM_Template/azureblob.json
+          parameters: ./ARM_Template/azureblob.parameters-dev.json
   LA-BiludAndDeploy-prod:
     runs-on: ubuntu-latest
     needs: LA-BiludAndDeploy-Dev
@@ -35,5 +35,5 @@ jobs:
           with:
             subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
             resourceGroupName: ${{ secrets.AZURE_RG }}
-            template: ./ARMTemplates/azureblob.json
-            parameters: ./ARMTemplates/azureblob.parameters-prod.json
+            template: ./ARM_Template/azureblob.json
+            parameters: ./ARM_Template/azureblob.parameters-prod.json
