--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,11 @@ jobs:
   LA-BiludAndDeploy-Dev:
    runs-on: ubuntu-latest
    steps:
+   
      - name: Checkout source code 
        uses: actions/checkout@master
+       env:
+         ENVIRONMENT: ${{ inputs.environment }}
    
      - uses: azure/login@v1
        with:
@@ -29,16 +32,21 @@ jobs:
     runs-on: ubuntu-latest
     needs: LA-BiludAndDeploy-Dev
     steps:
-        - uses: azure/login@v1
-          with:
-            creds: ${{ secrets.AZURE_CREDENTIALS }}
+    
+       - name: Checkout source code 
+         uses: actions/checkout@v2
+         env:
+           ENVIRONMENT: ${{ inputs.environment }}
+       - uses: azure/login@v1
+         with:
+           creds: ${{ secrets.AZURE_CREDENTIALS }}
                   
-        - name: Checkout source code 
-          uses: actions/checkout@v2
+       - name: Checkout source code 
+         uses: actions/checkout@v2
                
-        - name: Deploy ARM Template
-          uses: azure/arm-deploy@v1
-          with:
+       - name: Deploy ARM Template
+         uses: azure/arm-deploy@v1
+         with:
             subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
             resourceGroupName: ${{ secrets.AZURE_RG }}
             template: ./ARM_Template/azureblob.json
