--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,12 @@
 name: LA-Build&Deploy-Dev
-on: 
- workflow_dispatch:
-  inputs:
-   environment:
-    description: 'Environment to run tests against'
-    type: environment
-    required: true 
+on: push
 jobs:
   LA-BiludAndDeploy-Dev:
    runs-on: ubuntu-latest
+   environment: Development
    steps:
-   
      - name: Checkout source code 
        uses: actions/checkout@master
-       env:
-         ENVIRONMENT: Development
    
      - uses: azure/login@v1
        with:
@@ -26,27 +18,21 @@ jobs:
           resourceGroupName: ${{ secrets.AZURE_RG }}
           template: ./ARM_Template/azureblob.json
           parameters: ./ARM_Template/azureblob.parameters-dev.json
-          
   LA-BiludAndDeploy-prod:
-  
     runs-on: ubuntu-latest
     needs: LA-BiludAndDeploy-Dev
+    environment: Production
     steps:
-    
-       - name: Checkout source code 
-         uses: actions/checkout@v2
-         env:
-           ENVIRONMENT: ${{ inputs.environment }}
-       - uses: azure/login@v1
-         with:
-           creds: ${{ secrets.AZURE_CREDENTIALS }}
+        - uses: azure/login@v1
+          with:
+            creds: ${{ secrets.AZURE_CREDENTIALS }}
                   
-       - name: Checkout source code 
-         uses: actions/checkout@v2
+        - name: Checkout source code 
+          uses: actions/checkout@v2
                
-       - name: Deploy ARM Template
-         uses: azure/arm-deploy@v1
-         with:
+        - name: Deploy ARM Template
+          uses: azure/arm-deploy@v1
+          with:
             subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
             resourceGroupName: ${{ secrets.AZURE_RG }}
             template: ./ARM_Template/azureblob.json
